--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "firebase": "^11.10.0",
     "lucide-react": "^0.525.0",
     "qrcode.react": "^4.2.0",
