--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "firebase": "^11.10.0",
+    "i18next": "^25.3.4",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.525.0",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^15.6.1",
     "react-router-dom": "^7.7.0",
     "uuid": "^11.1.0"
   },
